deploy/k3s/aws_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: edge.groundlight.ai
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: edge-endpoint-service
                port:
                  number: 6717
